--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="d-flex align-items-center border">
-    <main class="container d-flex">
-        <div class="container border text-center">
-            <button onclick="getChoice('Pierre')">Pierre</button>
-            <button onclick="getChoice('Feuille')">Feuille</button>
-            <button onclick="getChoice('Ciseaux')">Ciseaux</button>
+    <main class=" d-flex mx-auto">
+        <div class="persoUn container border text-center p-3">
+            <img src="img/perso1.PNG" class="img-fluid" alt="">
+            <button onclick="getChoice('coup de pied')">coup de pied</button>
+            <button onclick="getChoice('sagesse')">sagesse</button>
+            <button onclick="getChoice('atomisation')">atomisation</button>
         </div>
-        <div class="container border text-center" id="ecrans">
-
+        <div class="container border text-center h1 text-white p-0 mx-auto" id="ecran">
         </div>
-        <div class="container border text-center">
-            <p>Robot</p>
+        <div class="persoDeux container border text-center p-3">
+            <img src="img/perso2.PNG" class="img-fluid" alt="">
+            <button>Pierre</button>
+            <button>Feuille</button>
+            <button>Ciseaux</button>
         </div>
     </main>
     <script src="script.js"></script>
