--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                         src="img/atomisation.PNG" width="50" alt=""></button>
             </div>
         </div>
-        <div class="container text-center fs-1 d-flex align-items-center justify-content-center h1 p-0 mx-auto" id="ecran">
+        <div class="container text-center fs-1 d-flex align-items-center justify-content-center h1 p-0 mx-auto"
+            id="ecran">
             <video muted autoplay loop src="video/combat.mp4" width="1400"></video>
         </div>
         <div class="card persoDeux" style="width: 18rem;">
@@ -36,7 +37,8 @@
         </div>
     </main>
     <footer class="footer rounded-3 text-black border mx-auto mt-3 bg-white d-flex flex-column align-items-center">
-        <button type="button" class="reglement btn text-white fw-bold my-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="reglement btn text-white fw-bold my-2" data-bs-toggle="modal"
+            data-bs-target="#exampleModal">
             réglementation
         </button>
 
@@ -51,35 +53,35 @@
                     <div class="modal-body">
                         <div class="modal-dialog modal-dialog-scrollable">
                             <div class="d-flex align-items-center mb-2">
-                                <img class="rounded-5" src="img/coup de pied.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/coup de pied.PNG" width="50" alt="">
                                 <p class="m-0 fs-4 mx-2">></p>
-                                <img class="rounded-5" src="img/epee.png" width="50" alt="">
+                                <img class="rounded-3" src="img/epee.png" width="50" alt="">
                             </div>
                             <div class="d-flex align-items-center mb-2">
-                                <img class="rounded-5" src="img/sagesse.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/sagesse.PNG" width="50" alt="">
                                 <p class="m-0 fs-4 mx-2">></p>
-                                <img class="rounded-5" src="img/guerrier.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/guerrier.PNG" width="50" alt="">
                             </div>
                             <div class="d-flex align-items-center mb-2">
-                                <img class="rounded-5" src="img/atomisation.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/atomisation.PNG" width="50" alt="">
                                 <p class="m-0 fs-4 mx-2">></p>
-                                <img class="rounded-5" src="img/hache.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/hache.PNG" width="50" alt="">
                             </div>
                             <hr>
                             <div class="d-flex align-items-center mb-2">
-                                <img class="rounded-5" src="img/epee.png" width="50" alt="">
+                                <img class="rounded-3" src="img/epee.png" width="50" alt="">
                                 <p class="m-0 fs-4 mx-2">></p>
-                                <img class="rounded-5" src="img/atomisation.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/atomisation.PNG" width="50" alt="">
                             </div>
                             <div class="d-flex align-items-center mb-2">
-                                <img class="rounded-5" src="img/hache.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/hache.PNG" width="50" alt="">
                                 <p class="m-0 fs-4 mx-2">></p>
-                                <img class="rounded-5" src="img/sagesse.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/sagesse.PNG" width="50" alt="">
                             </div>
                             <div class="d-flex align-items-center mb-2">
-                                <img class="rounded-5" src="img/guerrier.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/guerrier.PNG" width="50" alt="">
                                 <p class="m-0 fs-4 mx-2">></p>
-                                <img class="rounded-5" src="img/coup de pied.PNG" width="50" alt="">
+                                <img class="rounded-3" src="img/coup de pied.PNG" width="50" alt="">
                             </div>
                         </div>
                     </div>
@@ -90,7 +92,9 @@
             </div>
         </div>
     </footer>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
