--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                 </div>
             </div>
         </div>
+        <div class="point">
+            <div class=" border border-black mb-1 p-1 text-white" id="ecranUser">
+            </div>
+            <div class=" border border-black p-1 text-white" id="ecranRobot">
+            </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
